force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/OCX_Expansion_Qualification_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines account qualification criteria used to generate OCX Expansion Leads.</description>
    <label>Expansion Qualification Rule</label>
    <nameField><displayFormat>EQR-{00000}</displayFormat><label>Rule Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Expansion Qualification Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>