force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Active__c.field-meta.xml
<CustomField>
    <fullName>OCX_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>