force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Default_Close_Days__c.field-meta.xml
<CustomField>
    <fullName>OCX_Default_Close_Days__c</fullName>
    <label>Default Close Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>