force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Default_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Default_Opportunity_Type__c</fullName>
    <label>Default Opportunity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>