force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>OCX_Default_Value__c</fullName>
    <label>Default Estimated Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>