force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Description__c.field-meta.xml
<CustomField>
    <fullName>OCX_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>