force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Last_Test_Count__c.field-meta.xml
<CustomField>
    <fullName>OCX_Last_Test_Count__c</fullName>
    <label>Last Test Match Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>