force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Last_Tested_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Last_Tested_At__c</fullName>
    <label>Last Tested At</label>
    <type>DateTime</type>
</CustomField>