force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Match_Type__c</fullName>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value><fullName>All</fullName><default>false</default><label>All</label></value>
        <value><fullName>Any</fullName><default>false</default><label>Any</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>