force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Priority__c.field-meta.xml
<CustomField>
    <fullName>OCX_Priority__c</fullName>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>