force-app/main/default/objects/OCX_Expansion_Qualification_Rule__c/fields/OCX_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>OCX_Rule_Name__c</fullName>
    <label>Rule Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>